# Investment_Dashboard

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
InvestmentDashboard/: api.py
InvestmentDashboard/models/: __init__.py  fund_config.py  fund_data.py
InvestmentDashboard/utils/: __init__.py  charts.py
