[project]
name = "investment-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "numpy<2.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pygsheets>=2.0.6",
    "yfinance>=0.2.66",
]
